--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/user_db
+    url: jdbc:mysql://localhost:3306/disertatie
     username: root
-    password: null
+    password: root
   tomcat:
     max-wait: 20000
     max-active: 50
@@ -22,7 +22,7 @@ security:
   jwt:
     token:
       secret-key: secret-key
-      expire-length: 36000
+      expire-length: 3600000
       
 UserController:
   signin: Authenticates user and returns its JWT token.
@@ -30,3 +30,6 @@ UserController:
   delete: Deletes specific user by username
   search: Returns specific user by username
   me: Returns current user's data
+
+EventController:
+  addEventDate: Add the date for specific events
