add Response entity on controllers

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,6 +33,7 @@ UserController:
 
 EventController:
   addEvent: Add a specific event
+  applyOnEvent: Apply as user for an event
 
 EventDateController:
   addEventDate: Add the date for specific events
