push relationship modification

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,9 +17,9 @@ spring:
         format_sql: true
         id:
           new_generator_mappings: false
-logging:
-  level:
-    org.springframework.web: DEBUG
+#logging:
+#  level:
+#    org.springframework.web: DEBUG
 
 security:
   jwt:
