--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,6 +40,7 @@ UserController:
 EventController:
   addEvent: Add a specific event
   applyOnEvent: Apply as user for an event
+  getEvent: Get informations about a specific event
 
 EventLocationController:
   addEventLocation: Add a specific location for an event
