--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,17 @@ spring:
         format_sql: true
         id:
           new_generator_mappings: false
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: disertatietestmail@gmail.com
+    password: spectru140893
+    protocol: smtp
+    tls: true
+    properties.mail.smtp:
+      auth: true
+      starttls.enable: true
+      ssl.trust: smtp.gmail.com
 #logging:
 #  level:
 #    org.springframework.web: DEBUG
@@ -29,6 +40,7 @@ security:
     token:
       secret-key: secret-key
       expire-length: 3600000
+
       
 UserController:
   signin: Authenticates user and returns its JWT token.
@@ -49,3 +61,4 @@ EventLocationController:
 EventReservationController:
   addEventReservation: Reserve a place to event
   deleteEventReservation: Delete a specific reservation
+
