--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   mvc:
     dispatch-options-request: true
   datasource:
-    url: jdbc:mysql://localhost:3306/disertatie
+    url: jdbc:mysql://localhost:3306/test
     username: root
     password: root
   tomcat:
@@ -12,24 +12,13 @@ spring:
     min-idle: 15
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
         format_sql: true
         id:
           new_generator_mappings: false
-  mail:
-    host: smtp.gmail.com
-    port: 587
-    username: disertatietestmail@gmail.com
-    password: spectru140893
-    protocol: smtp
-    tls: true
-    properties.mail.smtp:
-      auth: true
-      starttls.enable: true
-      ssl.trust: smtp.gmail.com
 #logging:
 #  level:
 #    org.springframework.web: DEBUG
@@ -48,17 +37,4 @@ UserController:
   delete: Deletes specific user by username
   search: Returns specific user by username
   me: Returns current user's data
-
-EventController:
-  addEvent: Add a specific event
-  applyOnEvent: Apply as user for an event
-  getEvent: Get informations about a specific event
-
-EventLocationController:
-  addEventLocation: Add a specific location for an event
-  deleteEventLocation: Delete a specific event
-
-EventReservationController:
-  addEventReservation: Reserve a place to event
-  deleteEventReservation: Delete a specific reservation
 
